--- a/boardapp/templates/detail.html
+++ b/boardapp/templates/detail.html
@@ -9,7 +9,7 @@
                 <h1> 제목 : {{board.subject}}</h1>
                 <p> 작성 날짜 : {{board.created_date}}</p>
                 <p> 자세한 본문 내용 : {{board.memo}}</p>
-                <p> 작성자 : {{board.id}}</p>
+                <p> 작성자 : {{board.name}}</p>
             </div>
         </div>
     </div>
