--- a/boardapp/templates/write.html
+++ b/boardapp/templates/write.html
@@ -3,7 +3,14 @@
 
 <body>
     <div class="container">
-        <form action="{% url 'create'%}">
+        <!-- <form method="POST"> -->
+            <!-- {% csrf_token%}
+            <table>
+                {{form.as_table}}
+            </table>
+            <br>
+            <input type="submit" value="제출하기"> -->
+            <form action="{%url 'create'%}"
             <h4>제목:</h4>
             <input type="text" name="title">
             <br>
