--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -49,10 +49,21 @@
                 <div class="col-4 text-center">
                     <a class="#" href="{%url 'home'%}">I.S.L</a>
                 </div>
+                {% if user.is_active%}
                 <div class="col-4 d-flex justify-content-end align-items-center">
-                    <a class="btn btn-sm btn-outline-secondary" href="{%url 'sign_in'%}" style="margin: 10px;">Sign In</a>
-                    <a class="btn btn-sm btn-outline-secondary" href="{%url 'sign_up'%}" style="margin: 10px;">Sign Up</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">{{ user.username }} 로그인 중</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="javascript:{document.getElementById('logout').submit()}" style="margin: 10px;">LOGOUT</a>
+                        <form id="logout" method="POST" action="{%url 'logout'%}">
+                            {%csrf_token%}<input type="hidden"/>
+                    </form>
                 </div>
+                {% else %}
+                <div class="col-4 d-flex justify-content-end align-items-center">
+                    <a class="btn btn-sm btn-outline-secondary" href="{%url 'sign_in'%}" style="margin: 10px;">로그인</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="{%url 'sign_up'%}" style="margin: 10px;">회원가입</a>
+                </div>
+                {% endif %}
             </div>
         </header>
 
