--- a/loginapp/templates/sign_up.html
+++ b/loginapp/templates/sign_up.html
@@ -1,6 +1,27 @@
 {%extends 'base.html'%}
 {% block contents %}
+
 <body>
-    <div class="container">회원가입</div>
+    <div class="container">회원가입
+        <form method="POST" action="{%url 'sign_up'%}">
+            <!-- 로그인을 위한 POST 방식 -->
+            {% csrf_token %}
+            <!-- 보안을 위한 코드  -->
+            Username:
+            <br>
+            <input name="username" type="text" value="">
+            <br>
+            Password:
+            <br>
+            <input name="password1" type="password" value="">
+            <br>
+            Confirm Password:
+            <br>
+            <input name="password2" type="password" value="">
+            <br>
+            <br>
+            <input class="btn btn-primary" type="submit" value="Sign Up!">
+        </form>
+    </div>
 </body>
 {% endblock %}
