pagination and board delete

--- a/boardapp/templates/board.html
+++ b/boardapp/templates/board.html
@@ -14,13 +14,13 @@
                 </tr>
             </thead>
             <tbody>
-                {% for board in board_page_post %}
+                {% for board in post %}
                 <tr>
-                    <td>추후 번호 입력</td>
+                    <td>{{board.id}}</td>
                     <td><a href="{% url 'detail' board.id%}">{{board.subject}}</a>{{board.comments.count}}</td>
                     <td>{{board.name}}</td>
                     <td>{{board.created_date}}</td>
-                    <td>{{board.hits}}</td>
+                    <td>{{board.hits}}</td> 
                 </tr>
                 {%endfor%}
             </tbody>
@@ -28,35 +28,38 @@
         <hr>
         <div class="container">
             <a href="{% url 'write' %}" class="btn btn-outline-dark" role="button" aria-pressed="true">글쓰기</a>
-            <a href="?page=1">First</a>
-            {%if board_page_post.has_previous%}
+            <br><br>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <a class="page-link" href="?page=1">처음</a>
+                    {%if post.has_previous%}
+                    <a class="page-link" href="?page={{post.previous_page_number}}">이전</a>
+                    {% else %}
+                    <a class="page-link" href="#">이전</a>
+                    {%endif%}
+                    {% for page in page_range%}
+                    {%if page == post.number%}
+                    <li class="page-item active" aria-current="page" {% if page == post.number %}class="active"
+                        {% endif %}>
+                        <a class="page-link" href="?page={{page}}">{{page}}<span class="sr-only">(current)</span></a>
+                    </li>
+                    {%else%}
+                    <li class="page-item" {% if page == post.number %}class="active" {% endif %}>
+                        <a class="page-link" href="?page={{page}}">{{page}}</a>
+                    </li>
+                    {%endif%}
 
-            <a href="?page={{board_page_post.previous_page_number}}">Previous</a>
-            {%endif%}
+                    {% endfor %}
+                    {%if post.has_next%}
+                    <a class="page-link" href="?page={{post.next_page_number}}">다음</a>
+                    {%else%}
+                    <a class="page-link" href="#">다음</a>
+                    {%endif%}
+                    <a class="page-link" href="?page={{post.paginator.num_pages}}">끝</a>
+                </ul>
+            </nav>
 
-            <span>{{board_page_post.number}}</span>
-            <span>of</span>
-            <span>{{board_page_post.paginator.num_pages}}</span>
-
-            {%if board_page_post.has_next%}
-            <a href="?page={{board_page_post.next_page_number}}">Next</a>
-
-            {%endif%}
-            <a href="?page={{board_page_post.paginator.num_pages}}">Last</a>
         </div>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-
-                <a class="page-link" href="#">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
     </div>
     </div>
 </body>
