--- a/boardapp/templates/detail.html
+++ b/boardapp/templates/detail.html
@@ -1,15 +1,48 @@
 {%extends 'base.html'%}
 {% block contents %}
+<script>
+    function delete_confirm() {
+        var delete_c = confirm('정말 삭제하시겠습니까?');
+        if (!delete_c) {
+            event.defaultPrevented();
+        }
+        else{
+            location.href="{%url 'delete' board.id%}"
+        }
+    }
+</script>
+<style>
+    #detail_title {
+        font-weight: bold;
+        font-size: 25px;
+    }
+
+    .none_display {
+        display: none;
+    }
+</style>
+
 <body>
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h1>자세한 본문 내용입니다.</h1>
-                <br><br>
-                <h1> 제목 : {{board.subject}}</h1>
-                <p> 작성 날짜 : {{board.created_date}}</p>
-                <p> 자세한 본문 내용 : {{board.memo}}</p>
-                <p> 작성자 : {{board.name}}</p>
+                <div class="none_display">{{board.hit_update_counter}}</div>
+                <div id="detail_title">{{board.subject}}</div>
+                <div>{{board.created_date}}</div>
+                <hr>
+                <div>
+                    {{board.memo}}
+                </div>
+                {%if user.username == board.name%}
+                <a href="{%url 'update' board.id%}" onclick="delete_confirm()">수정</a>
+                <!-- <a href="{%url 'delete' board.id%}">삭제</a> -->
+                <a href="javascript:delete_confirm()">삭제</a>
+                {%else%}
+                <div class="none_display">
+                    <a href="#" onclick="Unauthorized()">수정</a>
+                    <a href="#" onclick="Unauthorized()">삭제</a>
+                </div>
+                {%endif%}
             </div>
         </div>
     </div>
