--- a/ISL_homepage/media/css/menu.css
+++ b/ISL_homepage/media/css/menu.css
@@ -8,10 +8,10 @@ html,
   color:teal;
 }
 .nav-link{
-  font-family: 'GmarketSansBold';
-  font-size: 20px;
-  color:darkslategrey;
-  margin-left: 10px;
+  font-family: 'GoyangDeogyang';
+  font-size: 18px;
+  color:rgb(72, 117, 117);
+  margin-left: 15px;
   margin-right: 20px;
 }
 .nav-link:hover{
@@ -21,12 +21,16 @@ html,
 h1{font-size: 60px;
     color: white;}
 h4{float:left;}
-nav{background-color:white;}
+nav{
+    background:white;
+    height: 54px;
+  }
 
 header{
     background-image: url('/media/img/feathers-5163670_1920.jpg');
     font-family: 'GmarketSansBold';
-    height: 401px;}
+    height: 400px;
+    }
 h6{
   color:white;
 }
@@ -39,8 +43,9 @@ h6{
 
 .inner-menu > li {
     padding: 16px 35px;
-    font-family: 'GmarketSansBold';
+    font-family: 'GoyangDeogyang';
     border-bottom: 1px solid darkslategrey;
+    font-size: 18px;
     
   }
 
@@ -48,6 +53,7 @@ h6{
     font-size: 16px;
     color: darkslategrey;
     text-decoration:none;
+    background-color: white;
   }
 .inner-menu > li > a:hover{
   color:teal;
@@ -56,16 +62,15 @@ h6{
    color: darkslategrey;
  }
 
- #outer-menu > li:hover > .inner-menu {display:block; }
- #outer-menu > .inner-menu > li:hover {background:black; }
+ #outer-menu > li:hover > .inner-menu {display:block;}
  
  #login{
-  font-family: 'GmarketSansBold';
+  font-family: 'GoyangIlsan';
   color:darkslategray;
   font-size:14px;
   text-decoration:none;
   position: relative;
-  bottom:5px;
+  bottom:-3px;
 
   margin-right: -1px;
   float:right;
@@ -75,3 +80,4 @@ h6{
   margin-right: 5px;
   border-radius: 0%;
  }
+
