--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
-          <img src="{% static 'images/logo.jpg'%}" id="image">
+          <img src="{% static 'homepage/logo.jpg'%}" id="image">
           <a class="navbar-brand" href="{%url 'home' %}">I.S.L</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
