인화 html css merge 완료

--- a/mainapp/templates/home.html
+++ b/mainapp/templates/home.html
@@ -50,7 +50,7 @@
                     <div class="col p-3 d-felx flex-column position-static">
                         <h3>담당 교수 소개</h3>
             
-                        <img src= "{% static 'images/professor.jpg'%}">
+                        <img src= "{% static 'mainapp/img/professor.jpg'%}">
                         <P> 김차종 교수님<br><br>
                             전공분야 : 컴퓨터그래픽, 정보공학<br>
                             관련교과목 : 컴퓨터그래픽스, Linux/Linux System, JAVA<br>
