--- a/boardapp/templates/board.html
+++ b/boardapp/templates/board.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <br>
     <div class="container">
         <table class="table table-striped">
             <thead>
@@ -27,7 +28,7 @@
                 <tr>
                     <td>{{board.id}}</td>
                     <td><a href="{% url 'detail' board.id%}">{{board.subject}}</a>{{board.comments.count}}</td>
-                    <td>{{board.name}}</td>
+                    <td>{{board.author}}</td>
                     <td>{{board.created_date}}</td>
                     <td>{{board.hits}}</td> 
                 </tr>
