--- a/mainapp/static/mainapp/css/menu.css
+++ b/mainapp/static/mainapp/css/menu.css
@@ -14,55 +14,19 @@ html,
   margin-left: 15px;
   margin-right: 20px;
 }
-.nav-link:hover{
-  color:teal;
-}
 
-h1{font-size: 60px;
-    color: white;}
 h4{float:left;}
-nav{
-    background:white;
-    height: 54px;
-  }
 
-header{
-    background-image: url("/static/mainapp/img/menu.jpg");
-    font-family: 'GmarketSansBold';
-    height: 400px;
-    }
+nav{
+    background:rgb(204, 253, 238);
+  }
 h6{
   color:white;
 }
-.inner-menu {
-    display:none;
-    position: absolute;
-    background: white;
-    list-style: none;
-    margin:0; padding:0px;}
 
-.inner-menu > li {
-    padding: 16px 35px;
-    font-family: 'GoyangDeogyang';
-    border-bottom: 1px solid darkslategrey;
-    font-size: 18px;
-    
-  }
-
-.inner-menu > li > a {
-    font-size: 16px;
-    color: darkslategrey;
-    text-decoration:none;
-    background-color: white;
-  }
-.inner-menu > li > a:hover{
-  color:teal;
-}
  #navbarDropdown{
    color: darkslategrey;
  }
-
- #outer-menu > li:hover > .inner-menu {display:block;}
  
  #login{
   font-family: 'GoyangIlsan';
