--- a/mainapp/templates/home.html
+++ b/mainapp/templates/home.html
@@ -29,9 +29,29 @@
     #card{
         margin-top: 30px;
     }
+
+    header{
+    background-image: url("{% static 'mainapp/img/menu.jpg' %}");
+    font-family: 'GmarketSansBold';
+    height: 400px;
+    }
+    
     </style>
 </head>
 <body>
+
+    <header>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+              <div style="margin-top: 170px;">
+                <h1>Intelligent System Lab</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
     <div class="container">
         <div class="row" id="card">
             <div class="col-md-6">
