회원가입 구현

--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -99,8 +99,7 @@
           </form>
           {% else %}
           <li><a class="btn-outline-light btn-sm" id="login" href="{%url 'sign_in'%}">로그인</a></li>
-          <li><a class="btn-sm btn-outline-light" id="login" href="{%url 'sign_up'%}"
-              onclick="window.open(this.href,'_blanck','width=500,height=500');return false;">회원가입</a></li>
+          <li><a class="btn-sm btn-outline-light" id="login" href="{%url 'sign_up'%}">회원가입</a></li>
           {% endif %}
         </ul>
       </div>
