--- a/loginapp/templates/sign_up.html
+++ b/loginapp/templates/sign_up.html
@@ -15,9 +15,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/sign-in/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" 
+    integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
     <style>
         @media (min-width: 768px) {
@@ -38,21 +37,41 @@
 <body class="text-center">
     <form class="form-signin" method="POST" action="{%url 'sign_up'%}">
         {% csrf_token %}
-        <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+       
         <h1 class="h3 mb-3 font-weight-normal">회원가입</h1>
-        <label for="inputEmail" class="sr-only">ID</label>
-        <input type="text" name="username" id="inputEmail" class="form-control" value="" placeholder="ID" required
-            autofocus>
+
+        <div>
+        {{signup_form.username}}
+        <button class="btn btn-primary btn-block" type="button">본인 확인</button>
+        </div>
         <br>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password1" id="inputPassword" class="form-control" value="" placeholder="Password"
-            required>
+        {{signup_form.password1}}
         <br>
-        <label for="inputPassword" class="sr-only">Confirm Password</label>
-        <input type="password" name="password2" id="inputPassword" class="form-control" value="" placeholder="Confirm Password"
-            required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Sign Up!" onclick="pop_close()">회원가입</button>
+        {{signup_form.password2}}
+        <br>
+        {{profile_form.name}}
+        <br>
+        {{profile_form.student_ID}}
+        <br>
+        {{profile_form.email}}
+        <br>
+        {% for field in signup_form %}
+            {% if field.errors %}
+				{% for error in field.errors %}
+	    		    <span class="help-block">{{ error }}</span>
+				{% endfor %}
+            {% endif %}
+        {% endfor %}
+        {% if signup_form.non_field_errors %}
+			{% for error in signup_form.non_field_errors %}
+			<p class="text-danger"><b>{{ error }}</b></p>
+			{% endfor %}
+		{% endif %}
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Sign Up!" >회원가입</button>
     </form>
+
+
+ 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
@@ -62,6 +81,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+
+
 </body>
 
 </html>
