--- a/boardapp/templates/board.html
+++ b/boardapp/templates/board.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <br>
+    <div class="container" style="margin-top: 100px; background-color: yellow;">안녕</div>
     <div class="container">
         <table class="table table-striped">
             <thead>
