--- a/homepage/templates/base.html
+++ b/homepage/templates/base.html
@@ -81,13 +81,7 @@
             <a class="nav-link" href="{%url 'board' %}">게시판</a>
           </li>
           <li class="outer-menu-item">
-            <span class="nav-link">자료실</span>
-            <ul class="inner-menu">
-              <li class="inner-menu-item"><a href="#">1학년</a></li>
-              <li class="inner-menu-item"><a href="#">2학년</a></li>
-              <li class="inner-menu-item"><a href="#">3학년</a></li>
-              <li class="inner-menu-item"><a href="#">4학년</a></li>
-            </ul>
+            <a class="nav-link" href="{%url 'dataroom' %}">자료실</a>
           </li>
           {% if user.is_active%}
           <li><a class="btn-sm btn-outline-white" id="login" data-toggle="dropdown" aria-haspopup="true"
@@ -106,19 +100,6 @@
       </div>
     </div>
   </nav>
-
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div style="margin-top: 180px;">
-            <h1>Intelligent System Lab</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
