--- a/boardapp/templates/board.html
+++ b/boardapp/templates/board.html
@@ -8,11 +8,13 @@
         #write{
             font-size: 16px;
         }
+        #board_container{
+            margin-top: 200px;
+        }
     </style>
 </head>
 <body>
-    <div class="container" style="margin-top: 100px; background-color: yellow;">안녕</div>
-    <div class="container">
+    <div class="container" id="board_container">
         <table class="table table-striped">
             <thead>
                 <tr>
